--- a/public/computer/sem3/DSA.html
+++ b/public/computer/sem3/DSA.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-3 books download , C4320703 ,SLP,Scripting Language -Python download for free , Computer">
+        content="gtu diploma sem-3 books download , C4320704 ,DSA,Data Structures and Algorithms download for free , Computer">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Scripting Language -Python  Sem-3 book Free Download, Computer Sem-3 All Study Material free, Get GTU Diploma Computer books free download, Sem-3 Diploma Engineering">
+        content=" Data Structures and Algorithms  Sem-3 book Free Download, Computer Sem-3 All Study Material free, Get GTU Diploma Computer books free download, Sem-3 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma Scripting Language -Python - KhudKibook GTU </title>
+    <title>Computer Diploma Data Structures and Algorithms - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -31,7 +31,7 @@
             <span class="nvsep729"> / </span>
             <a class="nvi751" href="/computer/sem3/homepage.html">Computer Sem-3 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem3/SLP.html">Scripting Language -Python </a>
+            <a id="atnvli953" href="/computer/sem3/DSA.html">Data Structures and Algorithms </a>
         </div>
     </div>
     <main>
@@ -41,14 +41,14 @@
                 <img class="mc7593512345" src="/img/na.webp" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Scripting Language -Python </h1>
+                <h1 class="bn159">Data Structures and Algorithms </h1>
 
-                <h1 class="md111">4330701</h1>
+                <h1 class="md111">4330704</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1VvhRVWJHXiOuQKZrcuSelR3Cliv5fvQI">
+                    <a href="https://drive.google.com/uc?export=download&id=1Pb-HtJuDr10X1IILPXdlJiBeAdWz0E5Y">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -75,14 +75,12 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=13aJAP-kSSt9_PxqqrJTKTLlw3gxIVsmX">2022
+                            <a href="https://drive.google.com/uc?export=download&id=">2022
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
         </div>
     </main>
 
@@ -92,7 +90,19 @@
     </h1>
     <div aria-label="main content " class="ab12345">
 
-        <!--  BCP -->
+        <!-- Scripting Language -Python  -->
+        <a href="/computer/sem3/SLP.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Scripting Language -Python </h1>
+                    <h1 class="d111">4330701</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--  RDBMS -->
         <a href="/computer/sem3/RDBMS.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/038.png" alt="coverpage">
@@ -112,18 +122,6 @@
                     <h1 class="bn159">Basics of Operating System</h1>
                     <h1 class="d111">4330703</h1>
                     <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!-- Data Structures and Algorithms -->
-        <a href="/computer/sem3/DSA.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Data Structures and Algorithms </h1>
-                    <h1 class="d111">4330704</h1>
-                    <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
