--- a/public/computer/sem3/homepage.html
+++ b/public/computer/sem3/homepage.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </a>
-            <!--  BCP -->
+            <!--  RDBMS -->
             <a href="/computer/sem3/RDBMS.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/038.png" alt="coverpage">
