--- a/public/computer/sem4/IWD.html
+++ b/public/computer/sem4/IWD.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-3 books download , C4320703 ,SLP,Scripting Language -Python download for free , Computer">
+        content="gtu diploma sem-4 books download , 4340704 ,IWD,Introduction to Web Development download for free , Computer">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Scripting Language -Python  Sem-3 book Free Download, Computer Sem-3 All Study Material free, Get GTU Diploma Computer books free download, Sem-3 Diploma Engineering">
+        content=" >Introduction to Web Development  Sem-4 book Free Download, Computer Sem-4 All Study Material free, Get GTU Diploma Computer books free download, Sem-4 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma Scripting Language -Python - KhudKibook GTU </title>
+    <title>Computer Diploma >Introduction to Web Development - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -22,16 +22,16 @@
     <nav id="nav">
     </nav>
     <header>
-        <h1 class="ph748">Scripting Language Python Study Material </h1>
+        <h1 class="ph748">Introduction to Web Development Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/computer/sem3/homepage.html">Computer Sem-3 </a>
+            <a class="nvi751" href="/computer/sem4/homepage.html">Computer Sem-4 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem3/SLP.html">Scripting Language -Python </a>
+            <a id="atnvli953" href="/computer/sem4/IWD.html">>Introduction to Web Development </a>
         </div>
     </div>
     <main>
@@ -41,18 +41,18 @@
                 <img class="mc7593512345" src="/img/na.webp" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Scripting Language -Python </h1>
+                <h1 class="bn159">>Introduction to Web Development </h1>
 
-                <h1 class="md111">4330701</h1>
+                <h1 class="md111">4340704</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1VvhRVWJHXiOuQKZrcuSelR3Cliv5fvQI">
+                    <a href="https://drive.google.com/uc?export=download&id=">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
-                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- <button class="mdbtn" data-modal-id="modal-2">Paper</button> -->
                     <!-- Modal 1 -->
                     <div class="m741852" id="modal-1">
                         <div class="mc7913">
@@ -71,18 +71,16 @@
                             </a>
                         </div>
                     </div>
-                    <!-- Modal 2 -->
+                    <!-- Modal 2
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=13aJAP-kSSt9_PxqqrJTKTLlw3gxIVsmX">2022
+                            <a href="https://drive.google.com/uc?export=download&id=">2022
                             </a>
                         </div>
-                    </div>
-
+                    </div> -->
                 </div>
             </div>
-
         </div>
     </main>
 
@@ -90,45 +88,92 @@
     <h1 class="kl789123">
         Recommnded Acording to your Semester
     </h1>
+    <!-- Compulsory -->
+    <h2 class="kl789123">
+        Compulsory (Sem-4)
+    </h2>
     <div aria-label="main content " class="ab12345">
 
-        <!--  BCP -->
-        <a href="/computer/sem3/RDBMS.html">
+        <!-- Advanced Object Oriented Programming  -->
+        <a href="/computer/sem4/AOOP.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/038.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Relational Database Management System</h1>
-                    <h1 class="d111">4330702</h1>
+                    <h1 class="bn159">Advanced Object Oriented Programming </h1>
+                    <h1 class="d111">4340701</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--  Basics of Operating System -->
-        <a href="/computer/sem3/BOS.html">
+        <!--  Introduction to Software Engineering -->
+        <a href="/computer/sem4/ISE.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/039.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Basics of Operating System</h1>
-                    <h1 class="d111">4330703</h1>
+                    <h1 class="bn159">Introduction to Software Engineering </h1>
+                    <h1 class="d111">4340702</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!-- Data Structures and Algorithms -->
-        <a href="/computer/sem3/DSA.html">
+        <!--  Computer Networking -->
+        <a href="/computer/sem4/CN.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                <img class="i12345" src="/img/na.webp" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Data Structures and Algorithms </h1>
-                    <h1 class="d111">4330704</h1>
-                    <h1 class="d212">Credit-5</h1>
+                    <h1 class="bn159">Computer Networking</h1>
+                    <h1 class="d111">4340703</h1>
+                    <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
     </div>
+    <!-- Elective -->
+    <h2 class="kl789123">
+        Elective (Sem-4)
+    </h2>
+    <div aria-label="main content " class="ab12345">
+        <!-- Essence of Indian Knowledge and Tradition  -->
+        <a href="/it/sem4/EIKT.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
+                    <h1 class="d111">4340001</h1>
+                    <h1 class="d212">Credit-2</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--Contributor Personality Development  -->
+        <a href="/it/sem4/CPD.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Contributor Personality Development</h1>
+                    <h1 class="d111">4340002</h1>
+                    <h1 class="d212">Credit-2</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+        <!--Integrated Personality Development Course  -->
+        <a href="/it/sem4/IPDC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Integrated Personality Development Course</h1>
+                    <h1 class="d111">4340003</h1>
+                    <h1 class="d212">Credit-2</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
+            </div>
+        </a>
+    </div>
+
 
     <!-- Sem-1 -->
     <h1 class="kl789123">
@@ -258,105 +303,56 @@
         </a>
 
     </div>
-    <!-- Sem-4 -->
+    <!-- Sem-3 -->
     <h1 class="kl789123">
-        Semester-4
+        Semester-3
     </h1>
-    <!-- Compulsory -->
-    <h2 class="kl789123">
-        Compulsory (Sem-4)
-    </h2>
     <div aria-label="main content " class="ab12345">
-        <!-- Advanced Object Oriented Programming  -->
-        <a href="/computer/sem4/AOOP.html">
+
+        <!-- Scripting Language -Python  -->
+        <a href="/computer/sem3/SLP.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Advanced Object Oriented Programming </h1>
-                    <h1 class="d111">4340701</h1>
+                    <h1 class="bn159">Scripting Language -Python </h1>
+                    <h1 class="d111">4330701</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--  Introduction to Software Engineering -->
-        <a href="/computer/sem4/ISE.html">
+        <!--  RDBMS -->
+        <a href="/computer/sem3/RDBMS.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
+                <img class="i12345" src="/img/038.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Introduction to Software Engineering </h1>
-                    <h1 class="d111">4340702</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!--  Computer Networking -->
-        <a href="/computer/sem4/CN.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="coverpage">
-                <div class="mali147852">
-                    <h1 class="bn159">Computer Networking</h1>
-                    <h1 class="d111">4340703</h1>
-                    <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-
-
-            </div>
-        </a>
-        <!-- Introduction to Web Development -->
-        <a href="/computer/sem4/IWD.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Introduction to Web Development </h1>
-                    <h1 class="d111">4340704</h1>
+                    <h1 class="bn159"> Relational Database Management System</h1>
+                    <h1 class="d111">4330702</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-    </div>
-    <!-- Elective -->
-    <h2 class="kl789123">
-        Elective (Sem-4)
-    </h2>
-    <div aria-label="main content " class="ab12345">
-        <!-- Essence of Indian Knowledge and Tradition  -->
-        <a href="/it/sem4/EIKT.html">
+        <!--  Basics of Operating System -->
+        <a href="/computer/sem3/BOS.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <img class="i12345" src="/img/039.png" alt="coverpage">
                 <div class="mali147852">
-                    <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
-                    <h1 class="d111">4340001</h1>
-                    <h1 class="d212">Credit-2</h1>
+                    <h1 class="bn159">Basics of Operating System</h1>
+                    <h1 class="d111">4330703</h1>
+                    <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
         </a>
-        <!--Contributor Personality Development  -->
-        <a href="/it/sem4/CPD.html">
+        <!-- Data Structures and Algorithms -->
+        <a href="/computer/sem3/DSA.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159">Contributor Personality Development</h1>
-                    <h1 class="d111">4340002</h1>
-                    <h1 class="d212">Credit-2</h1>
-                    <input class="kpb789123" type="button" value="Open">
-                </div>
-            </div>
-        </a>
-        <!--Integrated Personality Development Course  -->
-        <a href="/it/sem4/IPDC.html">
-            <div class="abc123456">
-                <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
-                <div class="mali147852">
-                    <h1 class="bn159">Integrated Personality Development Course</h1>
-                    <h1 class="d111">4340003</h1>
-                    <h1 class="d212">Credit-2</h1>
+                    <h1 class="bn159">Data Structures and Algorithms </h1>
+                    <h1 class="d111">4330704</h1>
+                    <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
             </div>
