--- a/public/computer/sem3/RDBMS.html
+++ b/public/computer/sem3/RDBMS.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-3 books download , C4320703 ,SLP,Scripting Language -Python download for free , Computer">
+        content="gtu diploma sem-3 books download , 4330702 ,RDBMS,Relational Database Management System download for free , Computer">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Scripting Language -Python  Sem-3 book Free Download, Computer Sem-3 All Study Material free, Get GTU Diploma Computer books free download, Sem-3 Diploma Engineering">
+        content=" Relational Database Management System  Sem-3 book Free Download, Computer Sem-3 All Study Material free, Get GTU Diploma Computer books free download, Sem-3 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Diploma Scripting Language -Python - KhudKibook GTU </title>
+    <title>Computer Diploma Relational Database Management System - KhudKibook GTU </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -31,24 +31,24 @@
             <span class="nvsep729"> / </span>
             <a class="nvi751" href="/computer/sem3/homepage.html">Computer Sem-3 </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/computer/sem3/SLP.html">Scripting Language -Python </a>
+            <a id="atnvli953" href="/computer/sem3/RDBMS.html">Relational Database Management System </a>
         </div>
     </div>
     <main>
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/na.webp" alt="Book Photo">
+                <img class="mc7593512345" src="/img/038.png" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Scripting Language -Python </h1>
+                <h1 class="bn159">Relational Database Management System </h1>
 
-                <h1 class="md111">4330701</h1>
+                <h1 class="md111">4330702</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1VvhRVWJHXiOuQKZrcuSelR3Cliv5fvQI">
+                    <a href="https://drive.google.com/uc?export=download&id=1kD4nLFQg0qBYSUyo3Vn-A1BAxrbSXYRB">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -75,14 +75,12 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=13aJAP-kSSt9_PxqqrJTKTLlw3gxIVsmX">2022
+                            <a href="https://drive.google.com/uc?export=download&id=">2022
                             </a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
         </div>
     </main>
 
@@ -92,13 +90,13 @@
     </h1>
     <div aria-label="main content " class="ab12345">
 
-        <!--  BCP -->
-        <a href="/computer/sem3/RDBMS.html">
+        <!-- Scripting Language -Python  -->
+        <a href="/computer/sem3/SLP.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/038.png" alt="coverpage">
+                <img class="i12345" src="/img/na.webp" alt="" srcset="">
                 <div class="mali147852">
-                    <h1 class="bn159"> Relational Database Management System</h1>
-                    <h1 class="d111">4330702</h1>
+                    <h1 class="bn159">Scripting Language -Python </h1>
+                    <h1 class="d111">4330701</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open">
                 </div>
